[workspace]
members = [".", "client", "proc-macro"]

[package]
name = "substrate-subxt"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["tokio1"]
client = ["substrate-subxt-client"]
# jsonrpsee can be configured to use tokio02 or tokio1.
tokio02 = ["jsonrpsee-http-client/tokio02", "jsonrpsee-ws-client/tokio02"]
tokio1 = ["jsonrpsee-http-client/tokio1", "jsonrpsee-ws-client/tokio1"]

[dependencies]
async-trait = "0.1.49"
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
dyn-clone = "1.0.4"
futures = "0.3.13"
hex = "0.4.3"
jsonrpsee-proc-macros = "0.2.0"
jsonrpsee-ws-client = { version = "0.2.0", default-features = false }
jsonrpsee-http-client = { version = "0.2.0", default-features = false }
jsonrpsee-types = "0.2.0"
log = "0.4.14"
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
url = "2.2.1"

substrate-subxt-client = { version = "0.7.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.15.0", path = "proc-macro" }

sp-application-crypto = "3.0.0"
sp-core = "3.0.0"
sp-rpc = "3.0.0"
sp-runtime = "3.0.0"
sp-std = "3.0.0"
sp-version = "3.0.0"

frame-metadata = "13.0.0"
frame-support = "3.0.0"
pallet-indices = "3.0.0"
pallet-staking = "3.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.8.3"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
sp-keyring = "3.0.0"
frame-system = "3.0.0"
pallet-balances = "3.0.0"



[patch."https://github.com/paritytech/substrate"]

frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-metadata = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-indices = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keyring = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }


[patch.crates-io]
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-metadata = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-indices = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keyring = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }