[package]
name = "test-runtime"
version = "0.21.0"
edition = "2021"

[dependencies]
subxt = { path = "../subxt" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../subxt" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
which = "4.2.2"
